Support hidden .ln2t_watchdog config folder alongside regular ln2t_watchdog
- Allow searching for configuration files in both ln2t_watchdog/ and .ln2t_watchdog/ directories
- Update README with documentation of hidden folder option
- Update example config with placement instructions
- Update CLI help text and init command template
- Update install.sh to document the hidden folder option

This provides users flexibility to organize configs privately using a hidden folder.

--- a/examples/example_config.yaml
+++ b/examples/example_config.yaml
@@ -3,6 +3,9 @@
 # Place this file (or your own variant) at:
 #   ~/code/<YYYY-Adjective_Animal-randomString>-code/ln2t_watchdog/<name>.yaml
 #
+# Or use a hidden folder for privacy:
+#   ~/code/<YYYY-Adjective_Animal-randomString>-code/.ln2t_watchdog/<name>.yaml
+#
 # All fields under a tool name are optional.  If omitted they will simply
 # not appear in the generated ln2t_tools command.
 
