--- a/systemd/ln2t-watchdog.service
+++ b/systemd/ln2t-watchdog.service
@@ -8,6 +8,9 @@ ExecStart=%h/.local/bin/ln2t-watchdog run
 # Give long-running pipelines time to start (the watchdog itself exits
 # quickly after spawning background processes).
 TimeoutStartSec=300
+# Don't wait for child processes to exit
+RemainAfterExit=no
+KillMode=process
 # Logging from the service itself goes to the journal.
 StandardOutput=journal
 StandardError=journal
