Add support for generic 'options' field in YAML config
- Add 'options' field to ToolSpec to support generic ln2t_tools options
- Options are inserted before --tool-args in command execution order
- Update parser to read 'options' or 'opts' from YAML config
- Update example config to demonstrate the new field
- Allows commands like: ln2t_tools import --dataset X --full --only-uncompressed --tool-args VALUE

--- a/examples/example_config.yaml
+++ b/examples/example_config.yaml
@@ -10,18 +10,11 @@
 # not appear in the generated ln2t_tools command.
 
 ln2t_tools:
+  import:
+    options: "--full --only-uncompressed"
+    tool_args: "--verbose"
+
   freesurfer:
     version: "7.2.0"
-    tool_args: "--recon-all all"
-    participant-label:
-      - "001"
-      - "042"
-      - "666"
-
-  fmriprep:
-    version: "21.1.4"
-    tool_args: "--fs-noreconall"
-    participant-label:
-      - "001"
-      - "042"
+    options: "--custom-flag"
       - "666"
